# rexicon

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  plan.md  rexicon.txt
.claude/: settings.local.json
.claude/skills/rexicon/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: guide-agents.md  guide-users.md
docs/design/: 00-overview.md  01-data-model.md  02-indexing-pipeline.md  03-memory-system.md  04-relationship-graph.md  05-mcp-server.md  06-rag-layer.md  07-cli-interface.md  08-architecture-synthesis.md  09-implementation-phases.md  10-agent-workflows.md
src/: db.rs  formatter.rs  hierarchy.rs  lib.rs  main.rs  mcp.rs  output.rs  registry.rs  relationships.rs  schema.rs  symbol.rs  treesitter.rs  walker.rs
tests/: languages.rs
