[package]
name = "rexicon"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "rexicon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.25"
globset = "0.4.18"
