[package]
name = "rexicon"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "rexicon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
globset = "0.4.18"
ignore = "0.4"
rayon = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "1.1.2+spec-1.1.0"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-java = "0.23"
tree-sitter-lua = "0.5"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-zig = "1.1"
